--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
+    "@types/react-router-dom": "5.1.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -22,7 +25,15 @@
     "i18next-browser-languagedetector": "^6.1.4",
     "react-i18next": "^11.16.2",
     "react-router-dom": "5.3.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "webpack": "^5.64.4",
+    "webpack-dev-server": "^4.6.0",
+    "webpack-manifest-plugin": "^4.0.2",
+    "dayjs": "^1.11.0",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^12.3.0",
+    "@date-io/dayjs": "^2.13.1",
+    "@mui/x-date-pickers": "^5.0.0-alpha.1"
   },
   "scripts": {
     "start": "react-scripts start",
