--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "home",
-  "homepage": "https://xapg6acc.github.io/home/",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
